fixed toast msg with empty creation, forwarding to the board and hover effect in the category

--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -515,6 +515,12 @@ form {
     width: 100%;
     padding: 16px 21px;
     cursor: pointer;
+
+    &:hover {
+      border-radius: 10px;
+      background-color: $hover_gray;
+      color: $black;
+    }
   }
 }
 
