--- a/src/app/main/content/board/single-task/single-task.component.scss
+++ b/src/app/main/content/board/single-task/single-task.component.scss
@@ -134,7 +134,7 @@
         border-radius: 50%;
 
         &:hover {
-          background: $mid_gray;
+          background: $hover_gray;
         }
       }
     }
