--- a/src/app/main/content/board/board.component.scss
+++ b/src/app/main/content/board/board.component.scss
@@ -109,7 +109,8 @@ input::placeholder {
   }
 }
 
-.btn_mobile, .btn_mobile_plus {
+.btn_mobile,
+.btn_mobile_plus {
   display: none;
 }
 
@@ -185,7 +186,10 @@ h2 {
   }
 }
 
-.to_do, .in_progress, .await_feedback, .done {
+.to_do,
+.in_progress,
+.await_feedback,
+.done {
   @include dFlex($ai: flex-start, $jc: flex-start);
   flex-direction: column;
   height: 100%;
@@ -208,9 +212,9 @@ h2 {
   text-align: center;
   align-content: center;
   margin-top: 34px; // change, before 24px%
-  min-height: 48px; 
+  min-height: 48px;
   width: 80%; // change, before 100%
-  
+
   background: $mid_gray;
   border-radius: 10px;
   border-style: dotted;
@@ -299,12 +303,12 @@ app-single-task {
 }
 
 @media (max-width: 860px) {
-section{
-  height: auto;
-}
+  section {
+    height: auto;
+  }
 
-.board_header_left {
-  @include dFlex($ai: center, $jc: space-between);
+  .board_header_left {
+    @include dFlex($ai: center, $jc: space-between);
 
     >h1 {
       font-size: 47px;
@@ -374,7 +378,9 @@ section{
   width: 100%;
   height: 100vh;
   z-index: 100;
-  background-color: rgba($black, 0.87)
+  background-color: rgba($black, 0.5);
+
+
 }
 
 .overlay_bg_white {
@@ -384,9 +390,41 @@ section{
   height: 85vh;
   border-radius: 24px;
 
+  &.show {
+    animation: slideIn 0.125s forwards;
+  }
+
+  &.hide {
+    animation: slideOut 0.125s backwards;
+  }
+
   app-add-task {
     width: 100%;
     padding-bottom: 50px;
+  }
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideOut {
+  from {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  to {
+    transform: translateX(100%);
+    opacity: 0;
   }
 }
 
