--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -49,7 +49,13 @@
 
   <!-- Add-Task-Overlay  -->
   @if(taskService.showCloseButton) {
-  <div class="overlay_task">
+  <div
+    class="overlay_task"
+    [ngClass]="{
+      show: taskService.showCloseButton,
+      hide: taskService.isClosing
+    }"
+  >
     <div class="overlay_bg_white">
       <app-add-task></app-add-task>
     </div>
@@ -81,8 +87,7 @@
         class="example-list"
         (cdkDropListDropped)="drop($event)"
       >
-        @for (task of this.filterList(this.taskService.todoList); track $index)
-        {
+        @for (task of this.filterList(this.taskService.todoList); track task) {
         <app-single-task
           (click)="setType('todo')"
           [task]="task"
