--- a/src/app/main/content/board/board.component.scss
+++ b/src/app/main/content/board/board.component.scss
@@ -22,7 +22,7 @@ section {
     border-color: $light_blue;
   }
 
-  >img {
+  > img {
     padding-left: 16px;
     margin-right: 16px;
     height: 32px;
@@ -70,7 +70,7 @@ input::placeholder {
   margin: 0px 12px 0 12px;
   padding: 4px;
 
-  >img {
+  > img {
     width: 20px;
     height: 20px;
     margin-top: 2px;
@@ -96,7 +96,7 @@ input::placeholder {
   padding: 8px 16px;
   white-space: nowrap;
 
-  >img {
+  > img {
     height: 18px;
     width: 18px;
     margin-left: 6px;
@@ -109,7 +109,8 @@ input::placeholder {
   }
 }
 
-.btn_mobile, .btn_mobile_plus {
+.btn_mobile,
+.btn_mobile_plus {
   display: none;
 }
 
@@ -146,7 +147,7 @@ h2 {
 .mobile_add_task_btn {
   display: none;
 
-  >img {
+  > img {
     // background-color: $dark_blue;
     height: 25px;
     width: 24px;
@@ -171,7 +172,7 @@ h2 {
   width: 100%;
   margin-bottom: 23px;
 
-  >button {
+  > button {
     height: 25px;
     width: 24px;
     background-image: url("./../../../../assets/img/icons/add_task_plus.svg");
@@ -185,7 +186,10 @@ h2 {
   }
 }
 
-.to_do, .in_progress, .await_feedback, .done {
+.to_do,
+.in_progress,
+.await_feedback,
+.done {
   @include dFlex($ai: flex-start, $jc: flex-start);
   flex-direction: column;
   height: 100%;
@@ -208,9 +212,9 @@ h2 {
   text-align: center;
   align-content: center;
   margin-top: 34px; // change, before 24px%
-  min-height: 48px; 
+  min-height: 48px;
   width: 80%; // change, before 100%
-  
+
   background: $mid_gray;
   border-radius: 10px;
   border-style: dotted;
@@ -299,14 +303,14 @@ app-single-task {
 }
 
 @media (max-width: 860px) {
-section{
-  height: auto;
-}
+  section {
+    height: auto;
+  }
 
-.board_header_left {
-  @include dFlex($ai: center, $jc: space-between);
+  .board_header_left {
+    @include dFlex($ai: center, $jc: space-between);
 
-    >h1 {
+    > h1 {
       font-size: 47px;
     }
   }
@@ -374,7 +378,37 @@ section{
   width: 100%;
   height: 100vh;
   z-index: 100;
-  background-color: rgba($black, 0.87)
+  background-color: rgba($black, 0.87);
+
+  &.show {
+    animation: slideIn 0.3s forwards;
+  }
+
+  &.hide {
+    animation: slideOut 0.3s forwards;
+  }
+
+  @keyframes slideIn {
+    from {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
+  @keyframes slideOut {
+    from {
+      transform: translateX(0);
+      opacity: 1;
+    }
+    to {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+  }
 }
 
 .overlay_bg_white {
