some fixes: resolved slide animation, console clear up, overlay max height

--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -53,7 +53,7 @@
     <div
       class="overlay_bg_white"
       [ngClass]="{
-        show: taskService.showCloseButton,
+        show: !taskService.isClosing,
         hide: taskService.isClosing
       }"
     >
