--- a/src/app/main/content/board/board.component.scss
+++ b/src/app/main/content/board/board.component.scss
@@ -7,7 +7,7 @@ section {
   height: calc(100vh - 91px);
 }
 
-.input_field {
+.input-field {
   @include dFlex($ai: center, $jc: space-between, $g: 24px);
   height: 48px;
   max-width: 312px;
@@ -19,7 +19,7 @@ section {
   padding: 8px;
 
   &:focus-within {
-    border-color: $light_blue;
+    border-color: $light-blue;
   }
 
   > img {
@@ -27,7 +27,7 @@ section {
     margin-right: 16px;
     height: 32px;
     width: 32px;
-    border-left: 1px solid $light_gray;
+    border-left: 1px solid $light-gray;
   }
 }
 
@@ -49,7 +49,7 @@ input {
 
 input::placeholder {
   @include font($fs: 20px, $fw: 400);
-  color: $light_gray;
+  color: $light-gray;
 }
 
 .input-search-btn {
@@ -79,11 +79,11 @@ input::placeholder {
 
   &:hover {
     cursor: pointer;
-    background-color: $light_gray;
+    background-color: $light-gray;
   }
 }
 
-.add_task_btn {
+.add-task-btn {
   @include font($fs: 24px, $fw: 700);
   @include dFlex($ai: center, $jc: space-evenly);
   height: 48px;
@@ -92,7 +92,7 @@ input::placeholder {
   border-radius: 10px;
   color: $white;
   border: none;
-  background-color: $dark_blue;
+  background-color: $dark-blue;
   padding: 8px 16px;
   white-space: nowrap;
 
@@ -103,18 +103,18 @@ input::placeholder {
   }
 
   &:hover {
-    background-color: $light_blue;
+    background-color: $light-blue;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     cursor: pointer;
   }
 }
 
-.btn_mobile,
-.btn_mobile_plus {
+.btn-mobile,
+.btn-mobile-plus {
   display: none;
 }
 
-.btn_desktop {
+.btn-desktop {
   display: block;
 }
 
@@ -124,14 +124,14 @@ h1 {
 
 h2 {
   @include font($fs: 20px, $fw: 700);
-  color: $blueish_gray;
+  color: $blueish-gray;
 }
 
 // h3 {
 //     @include font($fs: 20px, $fw: 700);
 // }
 
-.board_header {
+.board-header {
   @include dFlex($jc: space-between);
   flex-direction: row;
   // height: 10%;
@@ -139,27 +139,27 @@ h2 {
   padding: 128px 56px 56px 56px;
 }
 
-.board_header_left {
+.board-header-left {
   @include dFlex($jc: space-between);
   width: 100%;
 }
 
-.mobile_add_task_btn {
+.mobile-add-task-btn {
   display: none;
 
   > img {
-    // background-color: $dark_blue;
+    // background-color: $dark-blue;
     height: 25px;
     width: 24px;
   }
 }
 
-.board_header_right {
+.board-header-right {
   @include dFlex($jc: space-between);
   width: 100%;
 }
 
-.board_content {
+.board-content {
   @include dFlex($ai: flex-start, $jc: space-evenly, $g: 24px);
   flex-direction: row;
   height: 75%;
@@ -167,7 +167,7 @@ h2 {
   padding: 16px 56px;
 }
 
-.board_content_header {
+.board-content-header {
   @include dFlex($jc: space-between);
   width: 100%;
   margin-bottom: 23px;
@@ -186,9 +186,9 @@ h2 {
   }
 }
 
-.to_do,
-.in_progress,
-.await_feedback,
+.to-do,
+.in-progress,
+.await-feedback,
 .done {
   @include dFlex($ai: flex-start, $jc: flex-start);
   flex-direction: column;
@@ -196,17 +196,17 @@ h2 {
   width: 22%;
   position: relative;
   height: 50vh;
-  // border: 2px solid $light_gray;
+  // border: 2px solid $light-gray;
 }
 
-.tasks_content {
+.tasks-content {
   // @include dFlex($ai: flex-start, $jc: flex-start, $g: 10px);
   min-height: 64px;
   width: 100%;
-  background-color: $light_gray;
+  background-color: $light-gray;
 }
 
-.empty_bg {
+.empty-bg {
   @include font($fs: 16px, $fw: 400);
   color: $gray;
   text-align: center;
@@ -216,10 +216,10 @@ h2 {
   min-height: 48px;
   width: 80%; // change, before 100%
 
-  background: $mid_gray;
+  background: $mid-gray;
   border-radius: 10px;
   border-style: dotted;
-  border-color: $light_gray;
+  border-color: $light-gray;
   border-width: 2px;
   overflow: auto;
   position: absolute;
@@ -297,7 +297,7 @@ app-single-task {
     font-size: 16px;
   }
 
-  .board_content {
+  .board-content {
     @include dFlex($ai: flex-start, $jc: space-evenly, $g: 10px);
     padding: 16px;
   }
@@ -311,7 +311,7 @@ app-single-task {
     height: auto;
   }
 
-  .board_header_left {
+  .board-header-left {
     @include dFlex($ai: center, $jc: space-between);
 
     > h1 {
@@ -319,21 +319,21 @@ app-single-task {
     }
   }
 
-  .input_field {
+  .input-field {
     width: 100%;
   }
 
-  .add_task_btn {
+  .add-task-btn {
     display: none;
   }
 
-  .board_content {
+  .board-content {
     @include dFlex($ai: flex-start, $jc: space-evenly);
     flex-direction: column;
     width: 100%;
   }
 
-  .empty_bg {
+  .empty-bg {
     display: none;
   }
 
@@ -348,19 +348,19 @@ app-single-task {
     justify-content: flex-start;
   }
 
-  .to_do {
+  .to-do {
     width: 100%;
     padding-bottom: 32px;
     height: auto;
   }
 
-  .in_progress {
+  .in-progress {
     width: 100%;
     padding-bottom: 32px;
     height: auto;
   }
 
-  .await_feedback {
+  .await-feedback {
     width: 100%;
     padding-bottom: 32px;
     height: auto;
@@ -374,7 +374,7 @@ app-single-task {
 }
 
 /*-------------------------------------------------- Overlay Add-Task --------------------------------------------------*/
-.overlay_task {
+.overlay-task {
   @include dFlex();
   position: fixed;
   top: 0;
@@ -385,7 +385,7 @@ app-single-task {
   background-color: rgba($black, 0.5);
 }
 
-.overlay_bg_white {
+.overlay-bg-white {
   @include dFlex();
   background-color: $white;
   width: 77vw;
@@ -431,24 +431,24 @@ app-single-task {
 }
 
 @media (max-width: 1200px) {
-  .overlay_task {
+  .overlay-task {
     display: none;
   }
 
-  .board_header {
+  .board-header {
     @include dFlex($ai: center, $jc: flex-start, $g: 24px);
     flex-direction: column;
     padding: 48px 32px 24px 32px;
   }
 
-  .board_header_right {
+  .board-header-right {
     @include dFlex($jc: center);
     width: 100%;
   }
 
-  .mobile_add_task_btn {
+  .mobile-add-task-btn {
     @include dFlex($ai: center, $jc: center);
-    background-color: $dark_blue;
+    background-color: $dark-blue;
     border-radius: 10px;
     // display: block;
     height: 40px;
@@ -456,11 +456,11 @@ app-single-task {
     cursor: pointer;
   }
 
-  .btn_mobile_plus {
+  .btn-mobile-plus {
     display: block;
   }
 
-  .btn_desktop {
+  .btn-desktop {
     display: none;
   }
 }
