--- a/src/app/main/content/board/single-task/single-task.component.html
+++ b/src/app/main/content/board/single-task/single-task.component.html
@@ -75,7 +75,7 @@
           contactService.contactList; track $index) { @if(id == contact.id) {
           <div class="assignee">
             <div
-              class="profile_badge"
+              class="profile-badge"
               [ngStyle]="{ 'background-color': contact.bgColor }"
             >
               {{ contact.initials }}
@@ -135,7 +135,7 @@
 
   <div class="example-box" (click)="openOverlay(task)" cdkDrag>
     <p
-      class="task_card_category"
+      class="task-card-category"
       [ngClass]="{
         'user-story': task.category === 'User Story',
         'technical-task': task.category === 'Technical Task'
@@ -144,16 +144,16 @@
       {{ task.category }}
     </p>
 
-    <div class="task_card_main">
+    <div class="task-card-main">
       <h3>{{ task.title }}</h3>
       <p>{{ task.description }}</p>
     </div>
 
     <div
-      class="task_card_substasks"
+      class="task-card-substasks"
       *ngIf="task.subtasks && task.subtasks.length > 0"
     >
-      <div class="subtasks_progress">
+      <div class="subtasks-progress">
         <progress
           [value]="getCompletedSubtasksCount()"
           [max]="getSubtaskLength()"
@@ -166,13 +166,13 @@
       </p>
     </div>
 
-    <div class="task_card_team">
-      <div class="team_left">
+    <div class="task-card_team">
+      <div class="team-left">
         <!-- Zeigt maximal 4 Teilnehmer mit ihren Initialen -->
         @for (id of getVisibleContacts(task); track $index) { @for (contact of
         contactService.contactList; track $index) { @if(id == contact.id) {
         <div
-          class="profile_badge"
+          class="profile-badge"
           [ngStyle]="{ 'background-color': contact.bgColor }"
         >
           {{ contact.initials }}
@@ -181,12 +181,12 @@
 
         <!-- Falls mehr als 4 Teilnehmer vorhanden sind, zeige +x -->
         @if (getHiddenCount(task) > 0) {
-        <div class="profile_badge more">+{{ getHiddenCount(task) }}</div>
+        <div class="profile-badge more">+{{ getHiddenCount(task) }}</div>
         }
       </div>
 
-      <div class="team_right">
-        <div class="taskcard_priority">
+      <div class="team-right">
+        <div class="taskcard-priority">
           @if (task.prio === 'Urgent') {
           <img
             src="assets/img/icons/prio_high.svg"
