--- a/src/app/main/content/board/single-task/single-task.component.scss
+++ b/src/app/main/content/board/single-task/single-task.component.scss
@@ -192,7 +192,7 @@
         gap: 10px;
         margin-top: 16px;
 
-        .profile_badge {
+        .profile-badge {
           @include dFlex();
           width: 40px;
           height: 40px;
@@ -304,7 +304,7 @@
   }
 }
 
-.task_card_category {
+.task-card-category {
   @include font($fs: 16px, $fw: 400);
   height: 27px;
   min-height: 27px;
@@ -323,7 +323,7 @@
   background-color: $mint;
 }
 
-.task_card_main {
+.task-card-main {
   max-height: 84px;
   /* 3 dots appear when content overflows div size */
   display: -webkit-box;
@@ -332,7 +332,7 @@
   overflow: hidden;
 }
 
-.task_card_substasks {
+.task-card-substasks {
   @include font($fs: 12px, $fw: 400);
   @include dFlex($ai: center, $jc: space-between);
   width: 100%;
@@ -342,13 +342,13 @@
   }
 }
 
-.subtasks_progress {
+.subtasks-progress {
   max-width: 128px;
   width: 65%;
   height: 16px;
 }
 
-.subtasks_progress {
+.subtasks-progress {
   > progress {
     width: 100%; /* Matches your original progress_outer width */
     height: 10px; /* Matches your original progress_inner height */
@@ -372,29 +372,29 @@
   }
 }
 
-.progress_outer {
+.progress-outer {
   width: 100%;
   height: 16px;
 }
 
-.progress_inner {
+.progress-inner {
   width: 50%; /* needs to be changed dynamically depending on team member count */
   height: 8px;
   border-radius: 4px;
   background-color: $blue_lavender;
 }
 
-.task_card_team {
+.task-card-team {
   @include dFlex($ai: center, $jc: space-between);
   height: 32px;
   width: 100%;
 }
 
-.team_left {
+.team-left {
   display: flex;
   flex-direction: row;
 
-  > .profile_badge {
+  > .profile-badge {
     // position: relative;
     @include dFlex();
     width: 32px;
@@ -409,7 +409,7 @@
     margin-left: -8px;
   }
 
-  .profile_badge:first-child {
+  .profile-badge:first-child {
     margin-left: 0;
   }
 }
