--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,27 +1,27 @@
 <section>
-  <div class="header_left">
-    <img class="responsive_header_logo" src="assets/img/icons/logo_desktop.svg" alt="">
+  <div class="header-left">
+    <img class="responsive-header-logo" src="assets/img/icons/logo_desktop.svg" alt="">
     <h1>Kanban Project Management Tool</h1>
   </div>
-  <div class="header_right">
+  <div class="header-right">
     <a
-      class="help_link"
+      class="help-link"
       [ngClass]="{ active: navigationService.selectedItem === 6 }"
       (click)="selectItem(6)"
     ></a>
 
-    <div (click)="toggleOverlay()" [class.open]="isOpen" class="initials_btn">
+    <div (click)="toggleOverlay()" [class.open]="isOpen" class="initials-btn">
       <p>ID</p>
     </div>
-    <div *ngIf="isOpen" (click)="closeOverlay()" class="toggleOff_container">
+    <div *ngIf="isOpen" (click)="closeOverlay()" class="toggleOff-container">
       <div
         id="overlay"
         [class.open]="isOpen"
-        class="header_overlay"
+        class="header-overlay"
         >
-        <div class="inner_overlay">
+        <div class="inner-overlay">
 
-          <a class="burger_help_link" 
+          <a class="burger-help-link" 
           [ngClass]="{ active: navigationService.selectedItem === 6 }"
             (click)="selectItem(6)">Help</a>
 
